--- a/proyecto-vilches/proyecto-vilches/pom.xml
+++ b/proyecto-vilches/proyecto-vilches/pom.xml
@@ -14,6 +14,11 @@
 	<name>proyecto-vilches</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+
+			<maven.compiler.source>17</maven.compiler.source>
+			<maven.compiler.target>17</maven.compiler.target>
+
+
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
@@ -43,6 +48,23 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<profiles>
+		<profile>
+			<id>docker</id>
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<filtering>true</filtering>
+						<includes>
+							<include>application-docker.properties</include>
+						</includes>
+					</resource>
+				</resources>
+			</build>
+		</profile>
+	</profiles>
+
 
 	<build>
 		<plugins>
