--- a/proyecto-vilches/proyecto-vilches/pom.xml
+++ b/proyecto-vilches/proyecto-vilches/pom.xml
@@ -38,9 +38,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.6.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,15 +52,6 @@
 		<profile>
 			<id>docker</id>
 			<build>
-				<resources>
-					<resource>
-						<directory>src/main/resources</directory>
-						<filtering>true</filtering>
-						<includes>
-							<include>application-docker.properties</include>
-						</includes>
-					</resource>
-				</resources>
 			</build>
 		</profile>
 	</profiles>
