--- a/proyecto-vilches/proyecto-vilches/src/main/resources/application.properties
+++ b/proyecto-vilches/proyecto-vilches/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/usuario
+spring.datasource.url=jdbc:postgresql://postgres-container:5432/proyecto
 spring.datasource.username=usuario
 spring.datasource.password=usuario
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-
