añadido front-end, falta cambiarles las rutas una vez implementado el ingress controller

--- a/proyecto-vilches/proyecto-vilches/src/main/resources/application.properties
+++ b/proyecto-vilches/proyecto-vilches/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://postgres-container:5432/proyecto
+spring.datasource.url=jdbc:postgresql://localhost:5432/proyecto
+#spring.datasource.url=jdbc:postgresql://postgres-container:5432/proyecto
 spring.datasource.username=usuario
 spring.datasource.password=usuario
 spring.datasource.driver-class-name=org.postgresql.Driver
